--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // Support libraries
-    implementation "androidx.appcompat:appcompat:1.2.0"
+    implementation "androidx.appcompat:appcompat:$appcompatVersion"
     implementation "androidx.fragment:fragment:1.2.5"
     implementation "androidx.constraintlayout:constraintlayout:2.0.0-rc1"
 
