--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ buildscript {
 
     ext {
         kotlin_version = '1.6.0' //  1.3.72, , 1.7.10
+        appcompatVersion = '1.5.0' // 1.2.0
+        fragmentVersion = ''
         archLifecycleVersion = '1.1.1'
         room_version = '2.2.5'
         coroutine_version = '1.3.7'
